Animation and Overflow/Scroll Fixed

--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -15,10 +15,7 @@
 html {
   font-size: 62.5%;
 scroll-behavior: smooth;
-width: 100%;
-overflow-x: hidden;
 
-  /* 1rem = 10px */
 }
 
 body {
